# mini-game

./: CMakeLists.txt  README.md  data_struct.h  game.c  game.h
FrontPage/: index.html
FrontPage/css/: style.css
GameServer/: game_server.c  game_server.h  init_info.c  init_info.h
Webserver/: data_struct.h  http_session.c  http_session.h  init_log.c  init_log.h  init_server.c  init_server.h  init_web_server.c  init_web_server.h  webserver.c  webserver.h
Websockets/: base64.c  base64.h  init_websocket_server.c  init_websocket_server.h  init_ws_log.c  init_ws_log.h  session.c  session.h  sha1.c  sha1.h  websocket_server.c  websocket_server.h  websocket_session.c  websocket_session.h  websocket_session_init.c  websocket_session_init.h
